--- a/views/analitic.ejs
+++ b/views/analitic.ejs
@@ -11,7 +11,6 @@
       <div class="Naiming">Servec desk</div>
       <div class="menu">
         <div class="button_menu"><a href="/users/zaiv_zaiv">Заявки</a></div>
-        <div class="button_menu">Документы</div>
         <div class="button_menu"><a href="/users/sklad">Склад</a></div>
         <div class="button_menu">Аналитика</div>
         <div class="button_menu"><a href="/users/sotryd">Сотрудники</a></div>
@@ -33,7 +32,7 @@
             <div class="name">
               <%= user %>
             </div>
-            <div class="photo"></div>
+            <div class="photo"><img src="/ava.png"/></div>
           </div>
         </div>
       </div>
