--- a/views/new_zaiv.ejs
+++ b/views/new_zaiv.ejs
@@ -12,9 +12,10 @@
     <div class="sidebar">
       <div class="Naiming">Servec desk</div>
       <div class="menu">
-        <div class="button_menu"><a href="/users/zaiv_zaiv">Заявки </a>
-        </div>
-        <div class="button_menu">Документы</div>
+        <div class="button_menu"><a href="/users/zaiv_zaiv">Заявки</a></div>
+        <div class="button_menu"><a href="/users/sklad">Склад</a></div>
+        <div class="button_menu"> <a href="/users/analitic">Аналитика</a></div>
+        <div class="button_menu"><a href="/users/sotryd">Сотрудники</a></div>
         <div class="button_menu">Личный кабинет</div>
       </div>
     </div>
@@ -33,7 +34,7 @@
             <div class="name">
               <%= user %>
             </div>
-            <div class="photo"></div>
+            <div class="photo"><img src="/ava.png"/></div>
           </div>
         </div>
       </div>
