--- a/views/register.ejs
+++ b/views/register.ejs
@@ -37,7 +37,7 @@
             <label htmlFor="password2">Повторите пароль</label>
             <input type="password" id="password2" name="password2"  placeholder="Введите пароль" required/>
         </div>
-<button type="submit" class="btn flex" >Войти</button>
+<button type="submit" class="btn flex" >Зарегистрироваться</button>
 <a href="/">Уже зарегистрирован? Войти здесь</a>
     </form>
 </div>
