--- a/views/sklad.ejs
+++ b/views/sklad.ejs
@@ -13,8 +13,7 @@
             <div class="Naiming">Servec desk</div>
             <div class="menu">
                 <div class="button_menu"><a href="/users/zaiv_zaiv">Заявки</a></div>
-                <div class="button_menu">Документы</div>
-                <div class="button_menu">Склад</a></div>
+                <div class="button_menu"><a href="/users/sklad">Склад</a></div>
                 <div class="button_menu"> <a href="/users/analitic">Аналитика</a></div>
                 <div class="button_menu"><a href="/users/sotryd">Сотрудники</a></div>
                 <div class="button_menu">Личный кабинет</div>
@@ -33,7 +32,7 @@
                 </script>
             <div class="name_photo">
                 <div class="name"> <%= user %> </div>
-                <div class="photo"></div>
+                <div class="photo"><img src="/ava.png"/></div>
             </div>
         </div>
         </div>
