--- a/public/styles.css
+++ b/public/styles.css
@@ -66,6 +66,13 @@ body{
       background: #d9d9d9;
       border-radius: 50%;
 
+      img{
+        width: 50px;
+      height: 50px;
+      background: #d9d9d9;
+      border-radius: 50%;
+      }
+
     }
     .date {
       color: #212121;
@@ -362,4 +369,22 @@ margin: 45px 0;
   .dowland-prin{
     margin: 30px 100px;
   }
+}
+
+.close{
+  margin-top: 30px;
+  button{
+      background: inherit;
+      color: #f86969;
+      border: 2px solid #f86969;
+    }
+    button:hover{
+      display: block;
+      line-height: 12pt * 2;
+      border: none;
+      background: #f86969;
+      color: #212121;
+      border-bottom: 2px solid transparent;
+      outline: none;
+    }
 }
